[project]
name = "macprefs"
version = "2.0.3"
description = "Backup and Restore your Mac System and App Preferences"
authors = [{ name = "Sean Bugeja", email = "seanbugeja23@gmail.com" }]
dependencies = [
    "mock",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-testmon",
    "pytest-watcher>=0.3.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
macprefs = "macprefs.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--maxfail=2 -s --tb=native -v -m='not integration'"
markers = "integration: integration tests"

[tool.pytest-watcher]
now = false
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-final-newline",
    "invalid-name",
    "line-too-long",
]
