# macprefs is distributed as plain scripts via Homebrew, not as a Python
# package -- this file exists for dev tooling (uv, pytest, pylint) only.
# version.py stays canonical for the CLI and the publish flow; the version
# below is inert metadata.

[project]
name = "macprefs"
version = "1.0.27"
description = "Backup and restore Mac system and app preferences"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "deptry==0.25.1",
    "pip-audit==2.10.1",
    "pylint==4.0.6",
    "pyright==1.1.411",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-randomly==4.1.0",
    "pytest-testmon==2.2.0",
    "pytest-timeout==2.4.0",
    "pytest-watch==4.2.0",
    "ruff==0.15.22",
    "zizmor==1.28.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--maxfail=2 -s --tb=native -v --timeout=60 -m 'not integration'"
markers = ["integration: integration tests"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pylint.main]
jobs = 1
persistent = true

[tool.pylint."messages control"]
# Disable style, docstring, naming, and design conventions only.
# Correctness checks (unused-import, undefined-variable, no-member, etc.)
# are intentionally left enabled.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "consider-using-f-string",
    "consider-using-with",
    "unspecified-encoding",
    "dangerous-default-value",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "line-too-long",
    "trailing-whitespace",
    "missing-final-newline",
    "duplicate-code",
    "fixme",
    "broad-exception-caught",
    "broad-exception-raised",
]

[tool.pylint.reports]
reports = false
score = false

[tool.pylint.format]
max-line-length = 130

[tool.ruff]
line-length = 130
target-version = "py310"
# The extensionless entrypoint needs to be named to be included.
include = ["src/**/*.py", "tests/**/*.py", "src/macprefs", "ci/**/*.py"]

[tool.ruff.lint]
# Default rules (pyflakes + core pycodestyle) plus import sorting.
extend-select = ["I"]

[tool.pyright]
include = ["src", "tests", "ci"]
extraPaths = ["src"]
# Untyped codebase: basic mode checks inference-visible errors only.
typeCheckingMode = "basic"

[tool.bandit]
# This tool's entire job is shelling out (rsync, chown, killall, curl) --
# subprocess usage is by design, and commands are built from config, not
# user input. Suppress the blanket subprocess advisories; keep the rest
# (e.g. B602 shell=True stays active).
skips = ["B404", "B603", "B607"]
exclude_dirs = ["tests", ".venv"]

[tool.deptry]
# Flat modules in src/ import each other as top-level names.
known_first_party = [
    "app_store_preferences", "config", "dotfiles", "internet_accounts",
    "macprefs", "preferences", "publish", "shared_file_lists", "ssh_files",
    "startup_items", "system_preferences", "utils", "version",
]

# Pytest plugins and CLI tools are invoked, never imported.
[tool.deptry.per_rule_ignores]
DEP002 = ["pylint", "pytest-cov", "pytest-testmon", "pytest-watch", "ruff", "pip-audit", "pyright", "deptry", "bandit"]
